--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && prisma migrate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.12.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "iron-session": "^8.0.1",
     "next": "14.2.2",
     "prisma": "^5.12.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
+    "server-only": "^0.0.1",
+    "swr": "^2.2.5",
+    "validator": "^13.11.0",
+    "zod": "^3.23.3"
   },
   "devDependencies": {
     "@types/node": "^20",
